--- a/settings.json
+++ b/settings.json
@@ -1,16 +1,16 @@
 {
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@zeeoneofc",
+	"ownerNumber": "6285243240297",
+	"ownerNumberr": "6285243240297",
+	"cr": "@ward.bot",
 	"yt":"bit.ly/ytzeeoneofc",
 	"grub": "bit.ly/gczeeoneofc",
 	"wa": "bit.ly/wazeeoneofc",
 	"donate": "bit.ly/dtzeeoneofc",
 	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
+	"ownername": "ward.bot",
 	"botname":"ΛᄂPΉΛ BӨƬ",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"Alphabot.jpg",
